--- a/index.html
+++ b/index.html
@@ -87,68 +87,71 @@
     let speed = 3; // медленно!
     let slowDownStart = false;
     let needFinal = false;
-    let stepsToFinal = 0;
     let isFinalizing = false;
-    let targetShifts = 0;
+    let stepsToFinal = 0;
+    let finalPrizeInserted = false;
+    let finalPrizeIdx = -1;
+    let startTime = 0;
 
-    function animate() {
-      posY -= speed;
-      itemsDiv.style.transform = `translateY(${posY}px)`;
-      if (posY <= -itemHeight) {
-        posY += itemHeight;
-        ring.push(ring.shift());
-        drawRing();
+   function animate() {
+  posY -= speed;
+  itemsDiv.style.transform = `translateY(${posY}px)`;
 
-        // Если пора делать финальный режим, начинаем "досчитывать"
-        if (isFinalizing) {
-          stepsToFinal--;
-          // Как только досчитали до 0 — вставляем 1 TRX в центр
-          if (stepsToFinal === 0) {
-            ring[centerIdx] = winPrize;
-            needFinal = true;
-          }
-        }
-      }
+  if (posY <= -itemHeight) {
+    posY += itemHeight;
+    ring.push(ring.shift());
+    drawRing();
 
-      // Через 5 секунд начинаем финальный режим: рассчитываем, сколько shift до остановки
-      if (!isFinalizing && performance.now() - startTime > 5000) {
-        // Считаем, сколько шагов осталось до полной остановки, чтобы гарантированно попасть на 1 TRX по центру
-        // Просто пусть будет 9 shift-ов до остановки, но можно подстроить для эффекта
-        stepsToFinal = 9;
-        isFinalizing = true;
-      }
-
-      // Если уже выигрыш в центре, и posY≈0 — стоп
-      if (needFinal && Math.abs(posY) < 1) {
-        itemsDiv.style.transform = `translateY(0)`;
-        let view = [
-          ring[centerIdx-1],
-          ring[centerIdx],
-          ring[(centerIdx+1)%ring.length]
-        ];
-        itemsDiv.innerHTML = '';
-        view.forEach((prize, i) => {
-          let div = document.createElement('div');
-          div.className = 'item' + (i === 1 ? ' centered' : '');
-          div.textContent = prize;
-          itemsDiv.appendChild(div);
-        });
-        resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
-        claimBtn.style.display = 'inline-block';
-        rolling = false;
-        spinBtn.disabled = false;
-        cancelAnimationFrame(animFrame);
-        return;
-      }
-
-      // Медленно замедляем во время финализации
-      if (isFinalizing && speed > 1.1) {
-        speed -= 0.07;
-      }
-      animFrame = requestAnimationFrame(animate);
+    // Вставляем 1 TRX с учётом поправки!
+    if (isFinalizing && !finalPrizeInserted) {
+      finalPrizeIdx = (centerIdx + stepsToFinal - 1 + ring.length) % ring.length;
+      ring[finalPrizeIdx] = winPrize;
+      finalPrizeInserted = true;
     }
 
-    let startTime = 0;
+    if (isFinalizing) {
+      stepsToFinal--;
+    }
+  }
+
+  // Запускаем финальный режим после 5 секунд
+  if (!isFinalizing && performance.now() - startTime > 5000) {
+    stepsToFinal = 9; // Сколько раз еще прокрутить до стопа
+    isFinalizing = true;
+    finalPrizeInserted = false;
+  }
+
+  // Останавливаем анимацию, когда приз в центре
+  if (isFinalizing && stepsToFinal <= 0 && Math.abs(posY) < 1) {
+    itemsDiv.style.transform = `translateY(0)`;
+    let view = [
+      ring[centerIdx-1],
+      ring[centerIdx],
+      ring[(centerIdx+1)%ring.length]
+    ];
+    itemsDiv.innerHTML = '';
+    view.forEach((prize, i) => {
+      let div = document.createElement('div');
+      div.className = 'item' + (i === 1 ? ' centered' : '');
+      div.textContent = prize;
+      itemsDiv.appendChild(div);
+    });
+    resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
+    claimBtn.style.display = 'inline-block';
+    rolling = false;
+    spinBtn.disabled = false;
+    cancelAnimationFrame(animFrame);
+    return;
+  }
+
+  // Замедление
+  if (isFinalizing && speed > 1.1) {
+    speed -= 0.07;
+  }
+  animFrame = requestAnimationFrame(animate);
+}
+
+
     spinBtn.addEventListener('click', () => {
       if (rolling) return;
       rolling = true;
@@ -163,6 +166,8 @@
       needFinal = false;
       isFinalizing = false;
       stepsToFinal = 0;
+      finalPrizeInserted = false;
+      finalPrizeIdx = -1;
       startTime = performance.now();
       animFrame = requestAnimationFrame(animate);
     });
