--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     let rolling = false;
     let animFrame;
     let posY = 0;
-    let speed = 3; // медленно!
+    let speed = 3;
     let slowDownStart = false;
     let needFinal = false;
     let isFinalizing = false;
@@ -93,67 +93,69 @@
     let finalPrizeIdx = -1;
     let startTime = 0;
 
-   function animate() {
-  posY -= speed;
-  itemsDiv.style.transform = `translateY(${posY}px)`;
+    let spun = false; // флаг, был ли уже спин
 
-  if (posY <= -itemHeight) {
-    posY += itemHeight;
-    ring.push(ring.shift());
-    drawRing();
+    function animate() {
+      posY -= speed;
+      itemsDiv.style.transform = `translateY(${posY}px)`;
 
-    // Вставляем 1 TRX с учётом поправки!
-    if (isFinalizing && !finalPrizeInserted) {
-      finalPrizeIdx = (centerIdx + stepsToFinal - 1 + ring.length) % ring.length;
-      ring[finalPrizeIdx] = winPrize;
-      finalPrizeInserted = true;
+      if (posY <= -itemHeight) {
+        posY += itemHeight;
+        ring.push(ring.shift());
+        drawRing();
+
+        // Вставляем 1 TRX с учётом поправки!
+        if (isFinalizing && !finalPrizeInserted) {
+          finalPrizeIdx = (centerIdx + stepsToFinal - 1 + ring.length) % ring.length;
+          ring[finalPrizeIdx] = winPrize;
+          finalPrizeInserted = true;
+        }
+
+        if (isFinalizing) {
+          stepsToFinal--;
+        }
+      }
+
+      // Запускаем финальный режим после 5 секунд
+      if (!isFinalizing && performance.now() - startTime > 5000) {
+        stepsToFinal = 9;
+        isFinalizing = true;
+        finalPrizeInserted = false;
+      }
+
+      // Останавливаем анимацию, когда приз в центре
+      if (isFinalizing && stepsToFinal <= 0 && Math.abs(posY) < 1) {
+        itemsDiv.style.transform = `translateY(0)`;
+        let view = [
+          ring[centerIdx-1],
+          ring[centerIdx],
+          ring[(centerIdx+1)%ring.length]
+        ];
+        itemsDiv.innerHTML = '';
+        view.forEach((prize, i) => {
+          let div = document.createElement('div');
+          div.className = 'item' + (i === 1 ? ' centered' : '');
+          div.textContent = prize;
+          itemsDiv.appendChild(div);
+        });
+        resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
+        claimBtn.style.display = 'inline-block';
+        rolling = false;
+        // spinBtn.disabled = false; // УБРАНО! Кнопка всегда останется неактивной после первого раза
+        cancelAnimationFrame(animFrame);
+        return;
+      }
+
+      // Замедление
+      if (isFinalizing && speed > 1.1) {
+        speed -= 0.07;
+      }
+      animFrame = requestAnimationFrame(animate);
     }
-
-    if (isFinalizing) {
-      stepsToFinal--;
-    }
-  }
-
-  // Запускаем финальный режим после 5 секунд
-  if (!isFinalizing && performance.now() - startTime > 5000) {
-    stepsToFinal = 9; // Сколько раз еще прокрутить до стопа
-    isFinalizing = true;
-    finalPrizeInserted = false;
-  }
-
-  // Останавливаем анимацию, когда приз в центре
-  if (isFinalizing && stepsToFinal <= 0 && Math.abs(posY) < 1) {
-    itemsDiv.style.transform = `translateY(0)`;
-    let view = [
-      ring[centerIdx-1],
-      ring[centerIdx],
-      ring[(centerIdx+1)%ring.length]
-    ];
-    itemsDiv.innerHTML = '';
-    view.forEach((prize, i) => {
-      let div = document.createElement('div');
-      div.className = 'item' + (i === 1 ? ' centered' : '');
-      div.textContent = prize;
-      itemsDiv.appendChild(div);
-    });
-    resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
-    claimBtn.style.display = 'inline-block';
-    rolling = false;
-    spinBtn.disabled = false;
-    cancelAnimationFrame(animFrame);
-    return;
-  }
-
-  // Замедление
-  if (isFinalizing && speed > 1.1) {
-    speed -= 0.07;
-  }
-  animFrame = requestAnimationFrame(animate);
-}
-
 
     spinBtn.addEventListener('click', () => {
-      if (rolling) return;
+      if (rolling || spun) return;
+      spun = true; // только один раз
       rolling = true;
       spinBtn.disabled = true;
       resultDiv.textContent = '';
@@ -161,7 +163,7 @@
       fillRing();
       drawRing();
       posY = 0;
-      speed = 4; // медленно!
+      speed = 4;
       slowDownStart = false;
       needFinal = false;
       isFinalizing = false;
