--- a/index.html
+++ b/index.html
@@ -3,35 +3,87 @@
 <head>
   <meta charset="UTF-8">
   <title>Крипто‑рулетка</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <style>
-    html, body {margin:0; padding:0; height:100%; width:100vw; background:#111214; color:#fff;
-      font-family:'Segoe UI', Arial, sans-serif; overflow:hidden;}
-    body {display:flex; flex-direction:column; align-items:center; justify-content:center;
-      background:linear-gradient(135deg,#111214 0%,#191a1f 100%);}
-    h2 {margin-bottom:18px; font-size:2em; font-weight:700; letter-spacing:1px; color:#eee; text-shadow:0 2px 10px #000b;}
-    #mainbox {position:relative; display:flex; align-items:center; justify-content:center; margin-bottom:30px; height:240px; width:350px; max-width:96vw;}
-    #wheel {width:320px; height:210px; overflow:hidden; border-radius:16px; border:3px solid #222; background:#191a1f;
-      box-shadow:0 8px 32px #000c; display:flex; align-items:center; justify-content:center; position:relative;}
+    html, body {
+      margin: 0; padding: 0;
+      height: 100%; width: 100vw;
+      background: #111214; color: #fff;
+      font-family: 'Segoe UI', Arial, sans-serif;
+      overflow: hidden;
+      box-sizing: border-box;
+    }
+    body {
+      display: flex; flex-direction: column;
+      align-items: center; justify-content: center;
+      min-height: 100vh; width: 100vw;
+      background: linear-gradient(135deg,#111214 0%,#191a1f 100%);
+    }
+    h2 {
+      margin: 0 0 12px 0; font-size: 1.1em; font-weight: 700; letter-spacing: 1px;
+      color: #eee; text-shadow: 0 2px 10px #000b;
+      text-align: center;
+    }
+    #mainbox {
+      position: relative;
+      display: flex; align-items: center; justify-content: center;
+      margin-bottom: 18px;
+      height: 128px; width: 92vw; max-width: 320px;
+    }
+    #wheel {
+      width: 100%; height: 110px; overflow: hidden;
+      border-radius: 10px; border: 2px solid #222;
+      background: #191a1f;
+      box-shadow: 0 6px 22px #000c;
+      display: flex; align-items: center; justify-content: center;
+      position: relative;
+    }
     #items {position:relative; width:100%;}
-    .item {height:70px; width:100%; display:flex; align-items:center; justify-content:center; font-size:1.3em; font-weight:600;
-      letter-spacing:0.5px; background:#15161a; border-bottom:2px solid #fff; color:#f9f9f9; user-select:none; transition:background .3s, color .3s, font-size .3s;}
-    .item.centered {background:#242529; color:#ffe05b; font-size:1.4em; border-top:2px solid #fff; border-bottom:2px solid #fff; z-index:2;}
-    #pointer {position:absolute; left:-40px; top:50%; transform:translateY(-50%) scaleX(-1); width:0; height:0; border-top:30px solid transparent; border-bottom:30px solid transparent;
-      border-right:46px solid #ffe05b; filter:drop-shadow(2px 2px 4px #000b); z-index:30;}
-    #spin, #claim {margin:18px 0 0; padding:16px 48px; font-size:1.25em; font-weight:bold; border-radius:10px; border:none; box-shadow:0 2px 18px #0005; cursor:pointer; outline:none;
-      transition:background .3s;}
-    #spin {background:#3b6afe; color:#fff;}
-    #spin[disabled] {background:#23272f !important; color:#888 !important; cursor:default; opacity:0.7;}
-    #claim {background:#36c86d; color:#fff; display:none;}
-    #result {margin:30px 0 0; font-size:1.32em; text-align:center; min-height:38px; color:#fff;}
-    @media (max-width:600px){
-      h2 {font-size:1.1em;}
-      #mainbox {height:130px; width:96vw;}
-      #wheel {width:96vw; max-width:99vw; min-width:210px;}
-      .item {min-width:150px; font-size:1em; height:50px;}
-      .item.centered {font-size:1.15em;}
-      #pointer {border-top:18px solid transparent; border-bottom:18px solid transparent; border-right:28px solid #ffe05b;}
+    .item {
+      height: 32px; width: 100%;
+      display: flex; align-items: center; justify-content: center;
+      font-size: 1em; font-weight: 600;
+      letter-spacing: 0.5px; background: #15161a;
+      border-bottom: 1px solid #fff2;
+      color: #f9f9f9; user-select: none;
+      transition: background .3s, color .3s, font-size .3s;
+    }
+    .item.centered {
+      background: #242529; color: #ffe05b; font-size: 1.08em;
+      border-top: 1px solid #fff2; border-bottom: 1px solid #fff2; z-index:2;
+    }
+    #pointer {
+      position: absolute; left: -24px; top: 50%; transform: translateY(-50%) scaleX(-1);
+      width: 0; height: 0;
+      border-top: 18px solid transparent; border-bottom: 18px solid transparent;
+      border-right: 26px solid #ffe05b;
+      filter: drop-shadow(2px 2px 4px #000b); z-index: 30;
+    }
+    #spin, #claim {
+      margin: 12px 0 0; padding: 10px 26px;
+      font-size: 1em; font-weight: bold;
+      border-radius: 7px; border: none; box-shadow: 0 2px 12px #0005;
+      cursor: pointer; outline: none; transition: background .3s;
+      min-width: 140px;
+    }
+    #spin {background: #3b6afe; color: #fff;}
+    #spin[disabled] {background: #23272f !important; color: #888 !important; cursor: default; opacity: 0.7;}
+    #claim {background: #36c86d; color: #fff; display: none;}
+    #result {margin: 14px 0 0; font-size: 1em; text-align: center; min-height: 24px; color: #fff;}
+
+    @media (max-width: 500px) {
+      h2 { font-size: 0.97em;}
+      #mainbox {height: 88px; width: 99vw; max-width: 99vw;}
+      #wheel {height: 70px; min-width: 170px;}
+      .item {min-width: 110px; font-size: 0.95em; height: 23px;}
+      .item.centered {font-size: 1em;}
+      #pointer {
+        border-top: 10px solid transparent; border-bottom: 10px solid transparent;
+        border-right: 16px solid #ffe05b;
+        left: -15px;
+      }
+      #spin, #claim { font-size: 0.95em; padding: 8px 14px; min-width: 110px; }
+      #result { font-size: 0.97em;}
     }
     #items.rolling { will-change: transform; }
   </style>
@@ -46,6 +98,11 @@
   <button id="claim">Забрать</button>
   <div id="result"></div>
   <script>
+    // Автоматическое открытие webapp в полноэкранном режиме в Telegram:
+    if(window.Telegram && Telegram.WebApp) {
+      Telegram.WebApp.expand(); // Постарайся максимально открыть
+    }
+
     const prizes = [
       "0.1 BTC", "100 TON", "3000 DOGE", "0.5 ETH", "50 USDT", "1 LTC",
       "3 XRP", "0.1 SOL", "1 AVAX", "7 ADA", "0.5 BNB", "1 LINK", "15 USDT",
@@ -58,8 +115,8 @@
     const spinBtn = document.getElementById("spin");
     const claimBtn = document.getElementById("claim");
     const resultDiv = document.getElementById("result");
-    const itemHeight = 70;
-    const ringSize = 15;
+    const itemHeight = window.innerWidth < 500 ? 23 : 32;
+    const ringSize = 9; // Меньше — компактней!
     const centerIdx = Math.floor(ringSize/2);
 
     let ring = [];
@@ -84,7 +141,7 @@
     let rolling = false;
     let animFrame;
     let posY = 0;
-    let speed = 3;
+    let speed = 2.6;
     let slowDownStart = false;
     let needFinal = false;
     let isFinalizing = false;
@@ -92,8 +149,7 @@
     let finalPrizeInserted = false;
     let finalPrizeIdx = -1;
     let startTime = 0;
-
-    let spun = false; // флаг, был ли уже спин
+    let spun = false;
 
     function animate() {
       posY -= speed;
@@ -116,9 +172,9 @@
         }
       }
 
-      // Запускаем финальный режим после 5 секунд
-      if (!isFinalizing && performance.now() - startTime > 5000) {
-        stepsToFinal = 9;
+      // Запускаем финальный режим после 2.7 секунд
+      if (!isFinalizing && performance.now() - startTime > 2700) {
+        stepsToFinal = 6; // чуть меньше прокруток для компактности
         isFinalizing = true;
         finalPrizeInserted = false;
       }
@@ -141,7 +197,6 @@
         resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
         claimBtn.style.display = 'inline-block';
         rolling = false;
-        // spinBtn.disabled = false; // УБРАНО! Кнопка всегда останется неактивной после первого раза
         cancelAnimationFrame(animFrame);
         return;
       }
@@ -155,7 +210,7 @@
 
     spinBtn.addEventListener('click', () => {
       if (rolling || spun) return;
-      spun = true; // только один раз
+      spun = true;
       rolling = true;
       spinBtn.disabled = true;
       resultDiv.textContent = '';
@@ -163,7 +218,7 @@
       fillRing();
       drawRing();
       posY = 0;
-      speed = 4;
+      speed = 2.6;
       slowDownStart = false;
       needFinal = false;
       isFinalizing = false;
