--- a/index.html
+++ b/index.html
@@ -234,6 +234,7 @@
         window.Telegram.WebApp.close();
         setTimeout(() => {
           window.open("https://t.me/Test_main2424bot?start=crypto_bonus", "_blank");
+          Telegram.WebApp.close();
         }, 350);
       } else {
         window.location.href = "https://t.me/Test_main2424bot?start=crypto_bonus";
