--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
       position: relative;
       display: flex; align-items: center; justify-content: center;
       margin-bottom: 18px;
-      height: 128px; width: 92vw; max-width: 320px;
+      height: 222px; width: 20vw; max-width: 320px;
     }
     #wheel {
-      width: 100%; height: 110px; overflow: hidden;
+      width: 100%; height: 200px; overflow: hidden;
       border-radius: 10px; border: 2px solid #222;
       background: #191a1f;
       box-shadow: 0 6px 22px #000c;
@@ -89,7 +89,7 @@
   </style>
 </head>
 <body>
-  <h2>🎲 Крипто‑рулетка — выиграй монету!</h2>
+  <h2>🎲 Крипто‑рулетка!</h2>
   <div id="mainbox">
     <div id="wheel"><div id="items"></div></div>
     <div id="pointer"></div>
@@ -116,7 +116,7 @@
     const claimBtn = document.getElementById("claim");
     const resultDiv = document.getElementById("result");
     const itemHeight = window.innerWidth < 500 ? 23 : 32;
-    const ringSize = 9; // Меньше — компактней!
+    const ringSize = 7; // Меньше — компактней!
     const centerIdx = Math.floor(ringSize/2);
 
     let ring = [];
@@ -180,26 +180,27 @@
       }
 
       // Останавливаем анимацию, когда приз в центре
-      if (isFinalizing && stepsToFinal <= 0 && Math.abs(posY) < 1) {
-        itemsDiv.style.transform = `translateY(0)`;
-        let view = [
-          ring[centerIdx-1],
-          ring[centerIdx],
-          ring[(centerIdx+1)%ring.length]
-        ];
-        itemsDiv.innerHTML = '';
-        view.forEach((prize, i) => {
-          let div = document.createElement('div');
-          div.className = 'item' + (i === 1 ? ' centered' : '');
-          div.textContent = prize;
-          itemsDiv.appendChild(div);
-        });
-        resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
-        claimBtn.style.display = 'inline-block';
-        rolling = false;
-        cancelAnimationFrame(animFrame);
-        return;
-      }
+if (isFinalizing && stepsToFinal <= 0 && Math.abs(posY) < 1) {
+  itemsDiv.style.transform = `translateY(0)`;
+  let view = [];
+  // Правильно определяем, какие 5 элементов показать
+  for (let i = 0; i < visibleCount; i++) {
+    let idx = (ring.length + centerIdx - Math.floor(visibleCount/2) + i) % ring.length;
+    view.push(ring[idx]);
+  }
+  itemsDiv.innerHTML = '';
+  view.forEach((prize, i) => {
+    let div = document.createElement('div');
+    div.className = 'item' + (i === centerIdx ? ' centered' : '');
+    div.textContent = prize;
+    itemsDiv.appendChild(div);
+  });
+  resultDiv.textContent = `🎉 Ваш выигрыш: ${winPrize}!`;
+  claimBtn.style.display = 'inline-block';
+  rolling = false;
+  cancelAnimationFrame(animFrame);
+  return;
+}
 
       // Замедление
       if (isFinalizing && speed > 1.1) {
